<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical">

    <TableRow android:gravity="center">

        <TextView
            android:id="@+id/download_tv"
            style="@style/AdminOperateStyle"
            android:text="@string/nav_download_data"/>

        <TextView
            android:id="@+id/upload_tv"
            style="@style/AdminOperateStyle"
            android:text="@string/nav_upload_data"/>
    </TableRow>


    <TableRow android:gravity="center">

        <TextView
            android:id="@+id/count_result_tv"
            style="@style/AdminOperateStyle"
            android:text="@string/count_result"/>

        <TextView
            android:id="@+id/print_result_tv"
            style="@style/AdminOperateStyle"
            android:text="@string/common_print"/>
    </TableRow>

</TableLayout>