<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/commonBackgroundGray"
              android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/vote_proportion_chart"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/vote_total_tv"
            style="@style/CountContentStyle"
            android:text="@string/voted_number"/>

        <TextView
            android:id="@+id/voted_tv"
            style="@style/CountContentStyle"
            android:text="@string/voted_number"/>

        <TextView
            android:id="@+id/not_vote_tv"
            style="@style/CountContentStyle"
            android:text="@string/not_vote_number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/gender_proportion_chart"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/gender_total_tv"
            style="@style/CountContentStyle"
            android:text="@string/voted_number"/>

        <TextView
            android:id="@+id/men_tv"
            style="@style/CountContentStyle"
            android:text="@string/man_quantity"/>

        <TextView
            android:id="@+id/women_tv"
            style="@style/CountContentStyle"
            android:text="@string/women_quantity"/>

    </LinearLayout>

</LinearLayout>