<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF">

    <TextView
        android:id="@+id/textViewSampleHeading"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:gravity="center_horizontal|top"
        android:text="@string/sample_instruction"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_colour"
        android:textStyle="bold"
        android:typeface="monospace"/>

    <TextView
        android:id="@+id/textViewDisplayData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/device_data"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_colour"
        android:textStyle="bold"
        android:typeface="monospace"/>

    <TextView
        android:id="@+id/textViewInstruction"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal|bottom"
        android:text="@string/device_instruction_connect"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_colour"
        android:textStyle="bold"
        android:typeface="monospace"/>
</RelativeLayout>

